card layout bugs fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@
     z-index: 100;
     color: white;
     position: absolute;
-    bottom: 40px;
+    bottom: 75px;
     left: 25%;
 }
 
@@ -84,7 +84,7 @@
     box-shadow: 0 2px 2px 0 rgba(255, 255, 255, 0.14), 0 3px 1px -2px rgba(255, 255, 255, 0.12), 0 1px 5px 0 rgba(255, 255, 255, 0.2); 
 }
 
-    ul .btn:hover, .btn-large:hover, .btn-small:hover {
+    ul .btn:hover,.btn-large:hover, .btn-small:hover {
         background-color: #ffffff;
         -webkit-box-shadow: 0 2px 2px 0 rgba(255, 255, 255, 0.14), 0 3px 1px -2px rgba(255, 255, 255, 0.12), 0 1px 5px 0 rgba(255, 255, 255, 0.2); 
         box-shadow: 0 2px 2px 0 rgba(255, 255, 255, 0.14), 0 3px 1px -2px rgba(255, 255, 255, 0.12), 0 1px 5px 0 rgba(255, 255, 255, 0.2); 
@@ -120,4 +120,24 @@
 .company-logo{
     width: 200px;
     height: auto;
+}
+
+.cta{
+    height: 50px;
+    width: 100%;
+    background-color: rgb(161, 31, 31);
+    color: rgb(255, 255, 255);
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 8px;
+    padding-bottom: 10px;
+    text-decoration: none;
+    font-weight: 300;
+    font-size: 20px;
+}
+
+
+
+.card-content{
+    overflow:auto !important;
 }
